added code for OTP Validation
