# docs/swagger.json
@@ -6,7 +6,7 @@
         "contact": {},
         "version": "1.0"
     },
-    "host": "localhost:8080",
+    "host": "localhost:8081",
     "basePath": "/",
     "paths": {
         "/signin": {
@@ -82,6 +82,33 @@
                     }
                 }
             }
+        },
+        "/validateOtp": {
+            "post": {
+                "description": "Validate OTP using the provided service and repository",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Authentication"
+                ],
+                "summary": "Validate OTP",
+                "parameters": [
+                    {
+                        "description": "OTP validation request",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.ValidateOTPRequest"
+                        }
+                    }
+                ],
+                "responses": {}
+            }
         }
     },
     "definitions": {
@@ -96,15 +123,20 @@
         "models.SignInCredentials": {
             "type": "object",
             "required": [
-                "userName",
-                "userPassword"
+                "email",
+                "name",
+                "password"
             ],
             "properties": {
-                "userName": {
+                "email": {
+                    "type": "string",
+                    "example": "testUser@gmail.com"
+                },
+                "name": {
                     "type": "string",
                     "example": "Username"
                 },
-                "userPassword": {
+                "password": {
                     "type": "string",
                     "minLength": 8,
                     "example": "userPassword"
@@ -122,33 +154,51 @@
         "models.UserInfo": {
             "type": "object",
             "required": [
-                "userEmail",
-                "userName",
-                "userPanCardNumber",
-                "userPassword",
-                "userPhoneNumber"
+                "email",
+                "name",
+                "pancardNumber",
+                "password",
+                "phoneNumber"
             ],
             "properties": {
-                "userEmail": {
+                "email": {
                     "type": "string",
                     "example": "testUser@gmail.com"
                 },
-                "userName": {
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
                     "type": "string",
                     "example": "TestUser"
                 },
-                "userPanCardNumber": {
+                "pancardNumber": {
                     "type": "string",
                     "example": "abgjhi6789"
                 },
-                "userPassword": {
+                "password": {
                     "type": "string",
                     "minLength": 8,
                     "example": "sample11110"
                 },
-                "userPhoneNumber": {
+                "phoneNumber": {
                     "type": "string",
                     "example": "7878543610"
+                }
+            }
+        },
+        "models.ValidateOTPRequest": {
+            "type": "object",
+            "required": [
+                "email",
+                "otp"
+            ],
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "otp": {
+                    "type": "string"
                 }
             }
         },
